<resources>
    <string name="app_name">Circadian Life</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Home</string>
    <string name="forms_list_title">Forms</string>
    <string name="informations_title">Information</string>
    <string name="my_stats_title">My Statistics</string>
    <string name="profile0">You belong entirely to the night you grow in the shade as a <b>bat</b>.</string>
    <string name="profile1">You are nocturnal and you grow in the shade as an <b>owl</b>.</string>
    <string name="profile2">You are polyvalent, as an <b>humming-bird</b> you grow in the night or in the day !</string>
    <string name="profile3">You are an early bird, as a <b>tit</b> you grow in the morning </string>
    <string name="profile4">You belong entirely to the morning, as a <b>skylark</b> !</string>
    <string name="chartWA_name">Activity Graph </string>
    <string name="chartWA">This graph shows your average daily activity depending on the light cycles. Light cycles depend on the seasons and will have a visible impact on your activity. In the yellow part, you can see your daily activity and in the blue part your night activity. </string>
    <string name="chartWdNwd_name">Graphique d\'activité comparatif entre jours ouvrés et jours de congé </string>
    <string name="chartWdNwd">Ce graphique représente votre moyenne d\'activité les jours ouvrés comparé à celle des jours non-ouvrés, cette activité est présentée comme un cadran avec 24 heures. \n En rouge  : activité les jours non-ouvrés  \n En bleu : activité les jours ouvrés (de 12h00 a 23h59) </string>
    <string name="chartSocial_name">Summary chart of population activity  </string>
    <string name="chartSocial">This graph shows the repartition of the average activity for the population.</string>
    <string name="load">Loading... please wait</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Retype Password</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_forname">Forname</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register_in">Create an Account</string>
    <string name="error_login_msg">Wrong email or password, please try again.</string>
    <string name="error_login_title">Connection Failed</string>
    <string name="new_user_login">I do not have an account, Register me !</string>
    <string name="error_new_user_title">Creating account failed</string>
    <string name="error_new_user_msg">Email already registered</string>
    <string name="log_out">Logout</string>
    <string name="error_wrong_email_and_password_title">Email or Password Invalid</string>
    <string name="error_wrong_input_for_email">Invalid email</string>
    <string name="error_wrong_input_for_password">Your password must contains at least 7 characters</string>
    <string name="error_wrong_input_new_user_for_password">The passwords don\'t match</string>
    <string name="error_internet_title">Connection Failed</string>
    <string name="error_internet_msg">Please check your internet connection</string>
    <string name="error_server_unreachable">Server is currently unreachable, please try again later</string>
    <string name="error_server_unreachable_title">Sorry</string>
    <string name="error_server_not_responding_title">Sorry</string>
    <string name="error_server_not_responding">Server does not respond, please try again later</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="access_datas">You can access all your data online and more by associating a valid email address with your account.</string>
    <string name="emailsent">Verification e-mail with activation link has been sent to </string>
    <string name="reload">Reload (after you clic on activation link)</string>
    <string name="linkedAccount">Account Informations</string>
    <string name="accountInfo">Your account has been linked successfuly \n </string>
    <string name="linkToSite">Web : <a href="http://upnaesrv2.epfl.ch/CircadianServer/">clic here</a></string>
    <string name="downloadDatas">Download datas (csv)</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_drawer_menu">Menu</string>
    <string name="menu_1">Dashboard</string>
    <string name="menu_2">Consumption</string>
    <string name="menu_3">Collection</string>
    <string name="menu_4">Access Datas</string>
    <string name="menu_5">About Us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="forms_array">
        
        <item>MCTQ Like</item>
        <item>Daily Survey</item>
        
    </string-array>
    <string-array name="settings_list">
        <item>Use Your Data connection</item>
    </string-array>
    <string name="profile_form_forname">Forname :</string>
    <string name="profile_form_name">Name :</string>
    <string name="profile_form_sex">Sex :</string>
    <string name="profile_form_male">Male</string>
    <string name="profile_form_female">Female</string>
    <string name="profile_form_birthday">Birthday :</string>
    <string name="profile_form_birthday_input">yyyy/mm/dd</string>
    <string name="profile_form_save_infos">Save</string>
    <string name="profile_form_edit_infos">Edit</string>
    <string name="notification_title">Did you fill your daily form?</string>
    <string name="previous_string">Previous</string>
    <string name="next_string">Next</string>
    <string name="quit_string">Quit</string>
    <string name="start_string">Start</string>
    <string name="finish_string">Finish</string>
    <string name="form_intro_txt" formatted="false">The following form is composed of %d questions\nThe approximate duration is %d seconds</string>
    <string name="thx_msg_for_filling_form">Thank you very much for your participation! The form has been correctly fulfilled</string>
    <string name="daily_already_filled">You have already filled out the form today. Please, come back tomorrow</string>
    <string name="question_thorough_profile_what_counry">What is your country?</string>
    <string name="question_thorough_profile_what_counry_origin">What is your country of origin?</string>
    <string name="question_thorough_profile_what_religion">What is your religion?</string>
    <string-array name="question_thorough_profile_religion_list">
        <item>-- Please Select --</item>
        <item>No religion</item>
        <item>Christian (all denominations)</item>
        <item>Buddhist</item>
        <item>Hindu</item>
        <item>Jewish</item>
        <item>Muslim</item>
        <item>Sikh</item>
        <item>Other</item>
    </string-array>
    <string name="question_thorough_profile_religion_practice_level">Indicate your practice level. In a scale from 0 to 100, 0 being unpracticing 100 being very practicing</string>
    <string name="question_thorough_profile_political">Please, indicate your political ideas by a grade (0 does not correspond to your idea 100 totally correspond)</string>
    <string name="question_thorough_profile_conservative">Conservative</string>
    <string name="question_thorough_profile_reformer">Reformer</string>
    <string name="question_thorough_profile_ecology">Ecology</string>
    <string name="question_thorough_profile_immigration">Immigration</string>
    <string name="question_thorough_profile_social">Social</string>
    <string name="question_thorough_profile_capital">Capital</string>
    <string name="question_thorough_profile_what_income">What is your income range?</string>
    <string-array name="question_thorough_profile_what_income_list">
        <item>-- Please Select --</item>
        <item>Less than 10\'000</item>
        <item>10\'000 - 25\'000</item>
        <item>25\'000 - 50\'000</item>
        <item>50\'000 - 100\'000</item>
        <item>100\'000 - 150\'000</item>
        <item>More than 150\'000</item>
    </string-array>
    <string name="question_thorough_profile_any_children">Do you have any children ?</string>
    <string name="question_thorough_profile_any_children_instruction">Please click the add button to add a child and his birthday</string>
    <string name="question_thorough_profile_what_profession">What is your profession?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="alone_str">Alone</string>
    <string name="in_a_band_str">In a Band</string>
    <string name="please_select_str">-- Please Select --</string>
    <string name="aboutus">About Us</string>
    <string name="intro_text3">The goal of this smartphone app is to record our activity through the phone sensors as accelerometer, light and GPS in an automatized manner. The personal data will be accessible to each user, in order to understand their own rhythm and anonymised for population scale analysis. The application has an individual progression system, you gain levels by responding to different events and hidden rewards unlocked over use.\n\n\n</string>
    <string name="intro_title3">Goal of this project\n\n</string>
    <string name="intro_text4">We aim at gathering data on circadian activity of people and metadata like where they live, their profession, age, weight, and more. We want to study jet lag, feeding, sleep chronotype (early birds/night owl), light entrainment (seasonal changes, effect of latitude), social entrainment, effects of drugs, such as caffeine, and sexual habits. Using these data we will be able to study our biological rhythm at a population scale.\n\n</string>
    <string name="intro_text5">This Project is highly inspired by Till Roenneberg’s work on human chronobiology, which shed light on many aspects on our behavior, including the deleterious effect of shift work on health.\n
                                We believe that a better knowledge of our rhythms at a population scale will be useful to improve our life quality.\n\n
                                Jonathan Sobel, Jonathan Baeriswyl and Prof. Felix Naef have initiated this project at the Swiss institute of technology in Lausanne (EPFL).\n \n
    </string>
    <string name="sunrise">Sun rise</string>
    <string name="sunset">Sun set</string>
    <string name="ephemeris">Ephemeris</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="activity">Activity</string>
    <string name="fillfield">Please fill the fields below to know your profile</string>
    <string name="username">Username</string>
    <string name="birthdate">Year of birth</string>
    <string name="sexe">Sex</string>
    <string name="weight">Weight (kg)</string>
    <string name="size">Size (cm)</string>
    <string name="version">Circadian Life version 2.7 - 19.01.2017</string>
</resources>