<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e3e3e3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/linkedAccount"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fffdfd"/>
    </RelativeLayout>

    <!--<string name="linkedAccount">Account Informations</string>
    <string name="accountInfo">Your account has been linked successfuly \n </string>
    <string name="linkToSite">Web : <a href="http://upnaesrv2.epfl.ch/CircadianServer/">clic here</a></string>
    <string name="downloadDatas">Download datas (csv)</string>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:background="#c4daff"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="12dp"
            android:textColor="#259b04"
            android:text="@string/accountInfo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:id="@+id/t_email"
            android:text="Email: " />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/linkToSite" />
        <Button
            android:id="@+id/b_ddlDatas"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="#436084"
            android:text="@string/downloadDatas"
            android:onClick="downloadDatas"/>


    </LinearLayout>

</LinearLayout>