<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/question_music_layout"
    android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:id="@+id/question_music_player_question_doyou" />
    <RadioGroup
        android:id="@+id/question_music_player_radio_yes_no_answer"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@+id/question_music_player_question_doyou"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/question_music_player_radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_str"
            />

        <RadioButton
            android:id="@+id/question_music_player_radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_str"
            android:checked="true"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:layout_below="@+id/question_music_player_radio_yes_no_answer"
        android:id="@+id/question_music_player_question_in_band" />

    <RadioGroup
        android:id="@+id/question_music_player_radio_band_alone_answer"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_below="@+id/question_music_player_question_in_band"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/question_music_player_radioAlone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alone_str"
            />

        <RadioButton
            android:id="@+id/question_music_player_radioInBand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_a_band_str"
            android:checked="true"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/please_select_str"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:id="@+id/question_music_player_how_many_hours"
        android:layout_below="@+id/question_music_player_radio_band_alone_answer" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/please_select_str"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:id="@+id/question_music_player_selected_hours"
        android:layout_below="@+id/question_music_player_how_many_hours" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:layout_below="@+id/question_music_player_selected_hours"
        android:id="@+id/question_music_player_when" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/question_music_player_when_answer"
        android:layout_below="@+id/question_music_player_when">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:id="@+id/question_music_player_question_which_instrument"
        android:layout_below="@+id/question_music_player_when_answer"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/question_music_player_instrument_list"
        android:layout_below="@+id/question_music_player_question_which_instrument">
    </LinearLayout>


</RelativeLayout>